# CFP

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  README.md  TODO.md  clang_tidy_results.json
DOCS/: algorithm_signal_mechanism.md  client_design.md  communication_protocol.md  crash_handling_architecture.md  dynamic_algorithm_design.md  multi_camera_interface.md  system_architecture.md
clang-tidy-report/: clang_tidy_report.html
clang-tidy-report/charts/: checker_dist.html  file_ranking.html
cmake/: ApplyPatch.cmake  FindIKap.cmake  UploadSymbols.cmake  VersionGenerate.cmake
cmake/templates/: CaponVersionConfig.cmake.in  version.cpp.in  version.h.in
examples/: CMakeLists.txt  basic_example.cpp  crash_example.cpp  example_main_single_camera.cpp  generic_camera_example.cpp  log_client.cpp  log_server.cpp  multi_camera_example.cpp
include/: CameraCapture.hpp  DvpCameraBuilder.hpp  DvpCameraCapture.hpp  DvpCameraManager.hpp  DvpCapture.hpp  DvpConfig.hpp  DvpEventManager.hpp  FrameProcessor.hpp  ImageSignalBus.hpp  MultiCameraCoordinator.hpp
include/algo/: AlgoBase.hpp  AlgorithmConfigTraits.hpp  GenericAlgorithmConfigObserver.hpp  HoleDetection.hpp  SurFaceDetection.hpp
include/business/: BusinessManager.hpp
include/cameras/: CameraCapture.hpp  CameraFactory.hpp  CameraManager.hpp  EventHandlerRegistry.hpp  EventHandlers.hpp  EventStrategies.hpp  FrameProcessor.hpp  ImageSignalBus.hpp  MultiCameraCoordinator.hpp
include/cameras/Dvp/: DvpCameraBuilder.hpp  DvpCameraCapture.hpp  DvpCameraManager.hpp  DvpConfig.hpp  DvpEventManager.hpp
include/cameras/Ikap/: IkapCameraBuilder.hpp  IkapCameraCapture.hpp  IkapCameraManager.hpp  IkapConfig.hpp  IkapEventManager.hpp
include/config/: AlogoParams.hpp  CameraConfig.hpp  ConfigMacros.hpp  ConfigManager.hpp  ConfigObserver.hpp  GlobalConfig.hpp  ModuleIniter.hpp
include/debug/: CrashHandler.hpp  CrashHandlerImpl.hpp
include/logging/: CaponLogging.hpp  CrashLogger.hpp  IpcConfig.hpp  LoggingConfigManager.hpp
include/protocol/: AsioTcpTransport.hpp  LegacyCodec.hpp  ProtocolSession.hpp  TransportAdapter.hpp  codec.hpp  messages.hpp
include/redis/: IRedisClient.hpp  RedisClient.hpp
include/utils/: executable_path.h  get_local_ip.h  inicpp.hpp  magic_enum.hpp
patches/: cpp_redis_cmake_min.patch  tacopie.patch
script/: cfp.py  clang-tidy-check.ps1  clang_tidy_diff.py  format.py  header_license.py  run_clang_tidy.py  tidy_visualize.py  update_command.py  update_commant.py
src/: CMakeLists.txt  DvpCameraBuilder.cpp  DvpCameraCapture.cpp  DvpCapture.cpp  DvpEventManager.cpp  ImageSignalBus.cpp  example.cpp  main.cpp
src/algo/: HoleDetection.cpp  SurFaceDetection.cpp
src/app/: CMakeLists.txt  Ipc_serverice.cpp
src/app/crash-reporter/: crash_reporter.cpp
src/app/crash-server/: Dockerfile  README.md  cargo.toml  full_workflow_test.py  test.dmp
src/app/crash-server/Docs/: storage_module.md
src/app/crash-server/config/: config.yaml
src/app/crash-server/data/: crash.db
src/app/crash-server/src/: api.rs  config.rs  database.rs  main.rs  storage.rs
src/app/crash-server/src/middleware/: auth.rs
src/app/crash-server/vue-ui/frontend/: package-lock.json  package.json
src/app/crash-server/vue-ui/frontend/src/: App.vue
src/business/: BusinessManager.cpp
src/cameras/: CameraFactory.cpp  CameraManager.cpp  EventHandlers.cpp  ImageSignalBus.cpp
src/cameras/Dvp/: DvpCameraBuilder.cpp  DvpCameraCapture.cpp  DvpEventManager.cpp
src/cameras/Ikap/: IkapCameraBuilder.cpp  IkapCameraCapture.cpp  IkapEventManager.cpp
src/client/: CMakeLists.txt  DvpCameraDelegate.cpp  DvpCameraDelegate.h  DvpCameraManager.cpp  DvpCameraManager.h  DvpCameraModel.cpp  DvpCameraModel.h  DvpCameraView.cpp  DvpCameraView.h  DvpConfigDelegate.cpp  DvpConfigDelegate.h  DvpConfigModel.cpp  DvpConfigModel.h  DvpMainWindow.cpp  DvpMainWindow.h  DvpMultiCameraManager.cpp  DvpMultiCameraManager.h  main.cpp
src/debug/: CMakeLists.txt  CrashHandler.cpp  CrashHandlerImpl.cpp
src/logging/: CMakeLists.txt  CaponLogging.cpp  CrashLogger.cpp
src/protocol/: AsioTcpTransport.cpp  LegacyCodec.cpp  ProtocolSession.cpp
src/redis/: RedisClient.cpp
src/utils/: CMakeLists.txt  executable_path.cpp  get_local_ip.cpp
tests/: CMakeLists.txt  main.cpp
tests/camera_builder/: AdvancedConfigTests.cpp  BasicConfigTests.cpp
tests/hole_detection/: IntegrationTests.cpp
tests/mock/: DVPCameraMock.hpp  IDVPCamera.h  TestDvpCamera.h  TestDvpCameraBuilder.h
